fix(docs): search input alignment in ie

--- a/docs/app/@theme/components/header/header.component.scss
+++ b/docs/app/@theme/components/header/header.component.scss
@@ -193,7 +193,8 @@
 
   @include media-breakpoint-up(sm) {
     ngd-search {
-      display: block;
+      display: flex;
+      align-items: center;
     }
   }
 
